# eacctview

./: MANIFEST.in  README.md  eacct-view.py  pyproject.toml  setup.py
data/: architecture_specs.csv
eacct-view/: eacctview.py
eacctview/: dataloader.py  eacctview.py  info.py  plotter.py
