[project]
name = "eacctview"
version = "0.0.1"
authors = [
  { name="Benjamin Czaja", email="benjamin.czaja@surf.nl" },
]
description = "Terminal plotting tool for energy aware runtime (EAR)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sara-nl/eacct-view"
Issues = "https://github.com/sara-nl/eacct-view/issues"