[project]
name = "eacctview"
version = "0.0.1"
authors = [
  { name="Benjamin Czaja", email="benjamin.czaja@surf.nl" },
]
description = "Terminal plotting tool for energy aware runtime (EAR)"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "plotext>=5.2.8",
    "numpy>=1.20.1",
]

[project.urls]
Homepage = "https://github.com/sara-nl/eacctview"
Issues = "https://github.com/sara-nl/eacctview/issues"

[tool.setuptools]
packages = ["eacctview"]